--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run publicis:serve-ssr",
+    "serve:ssr": "node dist/publicis/server/main.js",
+    "build:ssr": "ng build --prod && ng run publicis:server:production",
+    "prerender": "ng run publicis:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,8 +22,11 @@
     "@angular/forms": "~10.1.2",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
+    "@angular/platform-server": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@nguniversal/express-engine": "^10.1.0",
     "bootstrap": "^4.5.2",
+    "express": "^4.15.2",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
@@ -30,6 +37,8 @@
     "@angular-devkit/build-angular": "~0.1001.2",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
