--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build && gzipper compress ./dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev:ssr": "ng run publicis:serve-ssr",
     "serve:ssr": "node dist/publicis/server/main.js",
-    "build:ssr": "ng build --prod && ng run publicis:server:production",
+    "build:ssr": "ng build --prod && ng run publicis:server:production && gzipper compress ./dist",
     "prerender": "ng run publicis:prerender",
-    "heroku-postbuild":"ng build --prod && ng run publicis:server:production"
+    "heroku-postbuild": "ng build --prod && ng run publicis:server:production"
   },
   "engines": {
     "node": "12.18.4",
-    "npm":"6.14.6"
+    "npm": "6.14.6"
   },
   "private": true,
   "dependencies": {
@@ -49,6 +49,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "gzipper": "^4.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
